--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/js/anime.min.js"></script>
-	<script src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/js/siema.min.js"></script>
-	<script src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/js/papaparse.min.js"></script>
-	<script src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/js/barba.min.js" type="text/javascript"></script>
-	<script src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/js/jquery.center.min.js"></script>
-	<script src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/js/tilt.jquery.min.js"></script>
+	<script src="js/anime.min.js"></script>
+	<script src="js/siema.min.js"></script>
+	<script src="js/papaparse.min.js"></script>
+	<script src="js/barba.min.js" type="text/javascript"></script>
+	<script src="js/jquery.center.min.js"></script>
+	<script src="js/tilt.jquery.min.js"></script>
 
 
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
-	<link rel="stylesheet" href="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/main.css">
+	<link rel="stylesheet" href="main.css">
 	
 	<title>Andrew Thompson</title>
 	
@@ -376,7 +376,7 @@
 	
 	<div id="panelCover">
 		<div id="os" class="portfolioContainer">
-			<div class="headerImage" style="background-image: url(file:///Untitled/Users/andrewthompson/Documents/Graphic%20Design/Portfolio%20update/Single%20Page/img/unicef.jpg)">
+			<div class="headerImage" style="background-image: url(img/unicef.jpg)">
 				<div class="bigTitle">Ocean Spray</div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer">
@@ -387,16 +387,16 @@
 			</div>
 			<div class="portfolioSiema2 portfolioSiema">
 				<div>
-					<img  src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/img/unicef1.png" style="width: 100%;" class="littyCarousel1">
+					<img  src="img/unicef1.png" style="width: 100%;" class="littyCarousel1">
 				</div>
 				<div>
-					<img src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/img/unicef2.png" style="width: 100%;" class="littyCarousel2">
+					<img src="img/unicef2.png" style="width: 100%;" class="littyCarousel2">
 				</div>
 				<div>
-					<img  src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/img/unicef3.png" style="width: 100%;" class="littyCarousel3">
+					<img  src="img/unicef3.png" style="width: 100%;" class="littyCarousel3">
 				</div>
 				<div>
-					<img src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/img/unicef4.png" style="width: 100%;" class="littyCarousel4">
+					<img src="img/unicef4.png" style="width: 100%;" class="littyCarousel4">
 				</div>
 			</div>
 			<div class="portfolioSolution">
@@ -426,11 +426,11 @@
 			<div class="right"></div>
 			<div class="siema">
 				<div>
-					<img src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/img/unicef.png" style="width: 100%; padding-left: -10%; padding-top: -10%;">
+					<img src="img/unicef.png" style="width: 100%; padding-left: -10%; padding-top: -10%;">
 				</div>
 				<div>
 <!--					<div style="background-image: url('img/os.png'); background-repeat: no-repeat; background-size: cover; background-position: center; width: 100%; height: 100%; position: absolute;"></div>-->
-					<img src="file:///Untitled/Users/andrewthompson/Documents/Graphic Design/Portfolio update/Single Page/img/os.png" style="height: 100%; padding-left: -10%; padding-top: -10%;">
+					<img src="img/os.png" style="height: 100%; padding-left: -10%; padding-top: -10%;">
 				</div>
 			</div>
 			<div class="siemaName"></div>
@@ -452,33 +452,33 @@ S1.293,9.212,1.729,9.212z"></path>
 		</div>
 	</div>
 	<div id="work">
-		<div data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(file:///Untitled/Users/andrewthompson/Documents/Graphic%20Design/Portfolio%20update/Single%20Page/img/unicef.jpg);" onclick="$('#container').load('unicef.html');">
+		<div data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" onclick="$('#container').load('unicef.html');">
 			<div class="portfolioTileName">UNICEF Kid Power Band</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</div>
 		
-		<div class="portfolioTile" style="grid-row: 2 / 3; background-image: url(file:///Untitled/Users/andrewthompson/Documents/Graphic%20Design/Portfolio%20update/Single%20Page/img/os_cover.png)">
+		<div class="portfolioTile" style="grid-row: 2 / 3; background-image: url(img/os_cover.png)">
 			<div class="portfolioTileName">Ocean Spray</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</div>
 		
-		<div class="portfolioTile" style="grid-row: 3 / 4; background-image: url(file:///Untitled/Users/andrewthompson/Documents/Graphic%20Design/Portfolio%20update/Single%20Page/img/pangea.png)">
+		<div class="portfolioTile" style="grid-row: 3 / 4; background-image: url(img/pangea.png)">
 			<div class="portfolioTileName">Pangea.app</div>
 			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
 			
 		</div>
 		
-		<div class="portfolioTile" style="grid-row: 4 / 5; background-image: url(file:///Untitled/Users/andrewthompson/Documents/Graphic%20Design/Portfolio%20update/Single%20Page/img/bhddh_cover.png)">
+		<div class="portfolioTile" style="grid-row: 4 / 5; background-image: url(img/bhddh_cover.png)">
 			<div class="portfolioTileName">BHDDH</div>
 			<div class="portfolioTileCaption">Branding</div>
 		</div>
 		
-		<div class="portfolioTile" style="grid-row: 5 / 6; background-image: url(file:///Untitled/Users/andrewthompson/Documents/Graphic%20Design/Portfolio%20update/Single%20Page/img/cas_cover.png)">
+		<div class="portfolioTile" style="grid-row: 5 / 6; background-image: url(img/cas_cover.png)">
 			<div class="portfolioTileName">CAS</div>
 			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
 		</div>
 		
-		<div class="portfolioTile" style="grid-row: 6 / 7; background-image: url(file:///Untitled/Users/andrewthompson/Documents/Graphic%20Design/Portfolio%20update/Single%20Page/img/moveout_cover.png)">
+		<div class="portfolioTile" style="grid-row: 6 / 7; background-image: url(img/moveout_cover.png)">
 			<div class="portfolioTileName">Move Out + Donate</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</div>
