--- a/unicef.html
+++ b/unicef.html
@@ -20,7 +20,7 @@
 	<title>Andrew Thompson</title>
 	
 	<script>
-		$('body').scrollTop();
+		$('body').scrollTop = 0;
 		
 		var photos = ['img/unicef1.png', 'img/unicef2.png', 'img/unicef3.png', 'img/unicef4.png'];
 
