--- a/unicef.html
+++ b/unicef.html
@@ -21,6 +21,7 @@
 	
 	<script>
 		$('body').scrollTop = 0;
+		console.log('scroll position: ' + $('body').scrollTop);
 		
 		var photos = ['img/unicef1.png', 'img/unicef2.png', 'img/unicef3.png', 'img/unicef4.png'];
 
