--- a/index.html
+++ b/index.html
@@ -175,7 +175,46 @@
 		}
 		
 		
+		function runBarba() {
+			Barba.Pjax.start();
+			
+			var FadeTransition = Barba.BaseTransition.extend({
+			  start: function() {
+				Promise
+				  .all([this.newContainerLoading, this.fadeOut()])
+				  .then(this.fadeIn.bind(this));
+			  },
+
+			  fadeOut: function() {
+				return $(this.oldContainer).animate({ opacity: 0 }).promise();
+			  },
+
+			  fadeIn: function() {
+				var _this = this;
+				var $el = $(this.newContainer);
+
+				$(this.oldContainer).hide();
+
+				$el.css({
+				  visibility : 'visible',
+				  opacity : 0
+				});
+
+				$el.animate({ opacity: 1 }, 400, function() {
+				  _this.done();
+				});
+			  }
+			});
+
+			Barba.Pjax.getTransition = function() {
+			  return FadeTransition;
+			};
+		}
+		
+		
 	$(document).ready(function(){
+		runBarba();
+		
 		$(".logo").center({against: '#main'});
 		$(".bio").center({against: '#left'});
 		$(".bio").css('left', 0);
@@ -409,7 +448,8 @@
 			</div>
 		</div>
 	</div>
-	<div id="container">
+	<div id="barba-wrapper">
+	<div class="barba-container">
 	<div id="main"> 
 		<div class="logo"></div>
 		<div id="left">
@@ -482,6 +522,7 @@ S1.293,9.212,1.729,9.212z"></path>
 			<div class="portfolioTileName">Move Out + Donate</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</div>
+	</div>
 	</div>
 	</div>
 </body>
