--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ S1.293,9.212,1.729,9.212z"></path>
 		</div>
 	</div>
 	<div id="work">
-		<div data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" onclick="$('#container').load('unicef.html');">
+		<div data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" onclick="$('#barba-container').load('unicef.html');">
 			<div class="portfolioTileName">UNICEF Kid Power Band</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</div>
