--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				document.title = caption[index][0];
 			}
 			
-			console.log("url changed");
+//			console.log("url changed");
 		}
 		
 		function portfolio(index) {			
