--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 	<link rel="stylesheet" href="main.css">
 	
-	<title>Andrew Thompson</title>
+	<title>Andrew Th</title>
 	
 	<style></style>
 	
