--- a/index.html
+++ b/index.html
@@ -456,9 +456,9 @@
 			<div class="left">
 				<div class="bio">Andrew Thompson <i>is an </i>advertising major <i>at </i>Johnson & Wales University <i>in </i>Providence, Rhode Island. <i>He specializes in </i>UI/UX <i>and </i>Graphic Design.</div>
 				<div class="links">
-					<p><a href="">Resume</a></p>
-					<p><a href="">Linkedin</a></p>
-					<p><a href="">Contact</a></p>
+					<p><a href="resume.pdf">Resume</a></p>
+					<p><a href="linkedin.com/in/andrew-l-thompson">Linkedin</a></p>
+					<p><a href="mailto:me@andrewthompson.me">Contact</a></p>
 				</div>
 			</div>
 		</div>
