--- a/unicef.html
+++ b/unicef.html
@@ -87,7 +87,7 @@
 	<div id="barba-wrapper">
 		<div class="barba-container">
 		<div id="unicef" class="portfolioContainer">
-			<div class="headerImage" style="background-image: url(img/unicef.jpg)">
+			<div class="headerImage" style="background-image: url(img/unicef.jpg)" onclick="$('#barba-wrapper').load('index.html');">
 				<div class="bigTitle">Unicef Kid Power Bands</div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer">
