--- a/unicef.html
+++ b/unicef.html
@@ -10,7 +10,7 @@
 	<script src="js/siema.min.js"></script>
 <!--	<script src="js/papaparse.min.js"></script>-->
 	<script src="js/barba.min.js" type="text/javascript"></script>
-	<script src="js/jquery.center.min.js"></script>
+<!--	<script src="js/jquery.center.min.js"></script>-->
 	<script src="js/tilt.jquery.min.js"></script>
 
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
@@ -119,6 +119,7 @@
 					<p>Handshake bootstrapping seed round analytics disruptive social media bandwidth hackathon low hanging fruit. Graphical user interface buyer channels product management return on investment leverage stealth social proof early adopters sales startup non-disclosure agreement hackathon burn rate. Business plan channels accelerator twitter return on investment value proposition crowdfunding virality focus strategy validation social media monetization interaction design. Influencer iPhone sales hackathon creative technology. Success metrics mass market termsheet partnership learning curve sales hackathon. Twitter paradigm shift low hanging fruit influencer client crowdfunding startup gamification iPad funding business-to-business user experience. Facebook angel investor rockstar first mover advantage assets seed money business-to-business hackathon gen-z. Gen-z growth hacking niche market infrastructure innovator graphical user interface facebook alpha business-to-business influencer business model canvas learning curve beta social proof. Growth hacking analytics startup churn rate channels bandwidth MVP holy grail focus. MVP creative direct mailing analytics low hanging fruit user experience branding research & development burn rate product management traction.</p></div>
 			</div>
 		</div>
+			<script src="js/jquery.center.min.js"></script>
 		</div>
 	</div>
 </body>
