--- a/indexLoaded.html
+++ b/indexLoaded.html
@@ -110,7 +110,7 @@
 		if ($(window).width() < 600) { 					//MOBILE
 			$('#right').css('width', '100%').css('bottom', '0').css('right', '50%').css('background-color', '#ffaeae');
 		} else {
-			$('#right').css('height', '100%');
+			$('#right').css('height', '100%').css('width', '50%');
 		}
 		
 		$('.siema', '.siemaName', '.siemaCaption', '.backButton', '.forwardButton').css('opacity', 1);
