Undid the weird AJAX stuff

--- a/unicef.html
+++ b/unicef.html
@@ -5,7 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-<!--
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/anime.min.js"></script>
 	<script src="js/siema.min.js"></script>
@@ -16,7 +15,6 @@
 
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 	<link rel="stylesheet" href="main.css">
--->
 	
 	<title>Andrew Thompson</title>
 	
@@ -90,9 +88,9 @@
 	<div id="barba-wrapper">
 		<div class="barba-container">
 		<div id="unicef" class="portfolioContainer">
-			<div class="headerImage" style="background-image: url(img/unicef.jpg)" onclick="$('#barba-wrapper').load('indexLoaded.html');">
+			<div class="headerImage" style="background-image: url(img/unicef.jpg)">
 				<div class="bigTitle">Unicef Kid Power Bands</div>
-				<div class="homeLogo"></div>
+				<div class="homeLogo" onclick="location.href='index.html'"></div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer">
 			</div> </div>
