--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		</div>
 	</div>
 	<div id="work">
-		<div data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" onclick="$('#barba-wrapper').load('unicef.html');">
+		<div data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" onclick="location.href='unicef.html'">
 			<div class="portfolioTileName">UNICEF Kid Power Band</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</div>
