--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</div>
 		
-		<div class="portfolioTile" style="grid-row: 2 / 3; background-image: url(img/os_cover.png)">
+		<a class="portfolioTile" style="grid-row: 2 / 3; background-image: url(img/os_cover.png)" href="unicef.html">
 			<div class="portfolioTileName">Ocean Spray</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
-		</div>
+		</a>
 		
 		<div class="portfolioTile" style="grid-row: 3 / 4; background-image: url(img/pangea.png)">
 			<div class="portfolioTileName">Pangea.app</div>
