--- a/unicef.html
+++ b/unicef.html
@@ -51,6 +51,7 @@
 			});
 
 			Barba.Pjax.getTransition = function() {
+				console.log("should be working");
 			  return FadeTransition;
 			};
 		}
