--- a/unicef.html
+++ b/unicef.html
@@ -107,11 +107,11 @@
 			
 			console.log($(".bigTitle").css('height'));
 			
-			for(var i = 0; i < photos.length; i++) {
-				var numOfPic = i + 1;
-				var hold = '.littyCarousel' + numOfPic;
-				$(hold).on('click', function(){	lity(photos[i]);	});
-			}
+//			for(var i = 0; i < photos.length; i++) {
+//				var numOfPic = i + 1;
+//				var hold = '.littyCarousel' + numOfPic;
+//				$(hold).on('click', function(){	lity(photos[i]);	});
+//			}
 		});
 	</script>
 </head>
