--- a/pangea.html
+++ b/pangea.html
@@ -107,8 +107,8 @@
 	<div id="barba-wrapper">
 		<div class="barba-container">
 		<div id="unicef" class="portfolioContainer">
-			<div class="headerImage" style="background-image: url(img/unicef.jpg)">
-				<div class="bigTitle">Unicef Kid Power Bands</div>
+			<div class="headerImage" style="background-image: url(img/pangea.png)">
+				<div class="bigTitle">Pangea.app</div>
 				<div class="homeLogo" title="home" onclick="location.href='index.html'"></div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer"> 
