--- a/index.html
+++ b/index.html
@@ -304,33 +304,33 @@
 		<a data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" href="unicef.html">
 			<div class="portfolioTileName">UNICEF Kid Power Band</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
-		</div>
+		</a>
 		
 		<a class="portfolioTile" style="grid-row: 2 / 3; background-image: url(img/os_cover.png)" href="os.html">
 			<div class="portfolioTileName">Ocean Spray</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</a>
 		
-		<div class="portfolioTile" style="grid-row: 3 / 4; background-image: url(img/pangea.png)" href="pangea.html">
+		<a class="portfolioTile" style="grid-row: 3 / 4; background-image: url(img/pangea.png)" href="pangea.html">
 			<div class="portfolioTileName">Pangea.app</div>
 			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
 			
-		</div>
+		</a>
 		
-		<div class="portfolioTile" style="grid-row: 4 / 5; background-image: url(img/bhddh_cover.png)" href="bhddh.html">
+		<a class="portfolioTile" style="grid-row: 4 / 5; background-image: url(img/bhddh_cover.png)" href="bhddh.html">
 			<div class="portfolioTileName">BHDDH</div>
 			<div class="portfolioTileCaption">Branding</div>
-		</div>
+		</a>
 		
-		<div class="portfolioTile" style="grid-row: 5 / 6; background-image: url(img/cas_cover.png)" href="cas.html">
+		<a class="portfolioTile" style="grid-row: 5 / 6; background-image: url(img/cas_cover.png)" href="cas.html">
 			<div class="portfolioTileName">CAS</div>
 			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
-		</div>
+		</a>
 		
-		<div class="portfolioTile" style="grid-row: 6 / 7; background-image: url(img/moveout_cover.png)" href="moveout.html">
+		<a class="portfolioTile" style="grid-row: 6 / 7; background-image: url(img/moveout_cover.png)" href="moveout.html">
 			<div class="portfolioTileName">Move Out + Donate</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
-		</div>
+		</a>
 	</div>
 	</div>
 	</div>
