--- a/cas.html
+++ b/cas.html
@@ -10,6 +10,7 @@
 	<script src="js/siema.min.js"></script>
 	<script src="js/barba.min.js" type="text/javascript"></script>
 	<script src="js/jquery.center.min.js"></script>
+	<script src="js/andrew.js"></script>
 
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 	<link rel="stylesheet" href="main.css">
@@ -17,43 +18,6 @@
 	<title>Andrew Thompson</title>
 	
 	<script>
-		function runBarba() {
-			Barba.Pjax.start();
-			
-			var FadeTransition = Barba.BaseTransition.extend({
-			  start: function() {
-				Promise
-				  .all([this.newContainerLoading, this.fadeOut()])
-				  .then(this.fadeIn.bind(this));
-			  },
-
-			  fadeOut: function() {
-				return $(this.oldContainer).animate({ opacity: 0 }).promise();
-			  },
-
-			  fadeIn: function() {
-				var _this = this;
-				var $el = $(this.newContainer);
-
-				$(this.oldContainer).hide();
-
-				$el.css({
-				  visibility : 'visible',
-				  opacity : 0
-				});
-
-				$el.animate({ opacity: 1 }, 400, function() {
-				  _this.done();
-				});
-			  }
-			});
-
-			Barba.Pjax.getTransition = function() {
-			  return FadeTransition;
-			};
-		}
-		
-		
 		$(document).ready(function(){
 			runBarba();
 			
@@ -105,7 +69,7 @@
 
 <body>
 	<div id="barba-wrapper">
-		<div class="barba-container">
+		<div class="barba-container" data-namespace="Cas">
 		<div id="unicef" class="portfolioContainer">
 			<div class="headerImage" style="background-image: url(img/cas_cover.png)">
 				<div class="bigTitle">Center for Academic Support</div>
