--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="js/barba.min.js" type="text/javascript"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/tilt.jquery.min.js"></script>
+	<script src="js/andrew.js"></script>
 
 
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
@@ -60,41 +61,7 @@
 //			console.log("url changed");
 		}
 		
-		function runBarba() {
-			Barba.Pjax.start();
-			
-			var FadeTransition = Barba.BaseTransition.extend({
-			  start: function() {
-				Promise
-				  .all([this.newContainerLoading, this.fadeOut()])
-				  .then(this.fadeIn.bind(this));
-			  },
-
-			  fadeOut: function() {
-				return $(this.oldContainer).animate({ opacity: 0 }).promise();
-			  },
-
-			  fadeIn: function() {
-				var _this = this;
-				var $el = $(this.newContainer);
-
-				$(this.oldContainer).hide();
-
-				$el.css({
-				  visibility : 'visible',
-				  opacity : 0
-				});
-
-				$el.animate({ opacity: 1 }, 400, function() {
-				  _this.done();
-				});
-			  }
-			});
-
-			Barba.Pjax.getTransition = function() {
-			  return FadeTransition;
-			};
-		}
+		
 		
 		
 	$(document).ready(function(){
@@ -221,18 +188,12 @@
 									onInit: changeCaption,
 									onChange: changeCaption
 								});
-								
 								timerID = window.setInterval(() => mySiema.next(), 3000);
 							}
 						});
 					}
 				}
 			});
-			
-					
-			
-
-			
 		});
 	</script>
 </head>
