--- a/index.html
+++ b/index.html
@@ -226,33 +226,33 @@
 		</div>
 	</div>
 	<div id="work">
-		<a data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" href="unicef.html">
+		<a data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" href="unicef">
 			<div class="portfolioTileName">UNICEF Kid Power Band</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</a>
 		
-		<a class="portfolioTile" style="grid-row: 2 / 3; background-image: url(img/os_cover.png)" href="os.html">
+		<a class="portfolioTile" style="grid-row: 2 / 3; background-image: url(img/os_cover.png)" href="os">
 			<div class="portfolioTileName">Ocean Spray</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</a>
 		
-		<a class="portfolioTile" style="grid-row: 3 / 4; background-image: url(img/pangea.png)" href="pangea.html">
+		<a class="portfolioTile" style="grid-row: 3 / 4; background-image: url(img/pangea.png)" href="pangea">
 			<div class="portfolioTileName">Pangea.app</div>
 			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
 			
 		</a>
 		
-		<a class="portfolioTile" style="grid-row: 4 / 5; background-image: url(img/bhddh_cover.png)" href="bhddh.html">
+		<a class="portfolioTile" style="grid-row: 4 / 5; background-image: url(img/bhddh_cover.png)" href="bhddh">
 			<div class="portfolioTileName">BHDDH</div>
 			<div class="portfolioTileCaption">Branding</div>
 		</a>
 		
-		<a class="portfolioTile" style="grid-row: 5 / 6; background-image: url(img/cas_cover.png)" href="cas.html">
+		<a class="portfolioTile" style="grid-row: 5 / 6; background-image: url(img/cas_cover.png)" href="cas">
 			<div class="portfolioTileName">CAS</div>
 			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
 		</a>
 		
-		<a class="portfolioTile" style="grid-row: 6 / 7; background-image: url(img/moveout_cover.png)" href="moveout.html">
+		<a class="portfolioTile" style="grid-row: 6 / 7; background-image: url(img/moveout_cover.png)" href="moveout">
 			<div class="portfolioTileName">Move Out + Donate</div>
 			<div class="portfolioTileCaption">Advertising Campaign</div>
 		</a>
