--- a/cas.html
+++ b/cas.html
@@ -72,7 +72,7 @@
 		<div class="barba-container" data-namespace="Cas">
 		<div id="unicef" class="portfolioContainer">
 			<div class="headerImage" style="background-image: url(img/cas_cover.png)">
-				<div class="bigTitle">Center for Academic Support</div>
+				<div class="bigTitle" style="font-size: 4vw;">Center for Academic Support</div>
 				<div class="homeLogo" title="home" onclick="location.href='index.html'"></div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer"> 
