--- a/bhddh.html
+++ b/bhddh.html
@@ -73,7 +73,7 @@
 		<div id="unicef" class="portfolioContainer">
 			<div class="headerImage" style="background-image: url(img/bhddh_cover.png)">
 				<div class="bigTitle">BHDDH</div>
-				<div class="homeLogo" title="home" onclick="location.href='index.html'"></div>
+				<div class="homeLogo" title="home" onclick="location.href='andrewthompson.me'"></div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer"> 
 			</div> </div>
