--- a/cas.html
+++ b/cas.html
@@ -73,7 +73,7 @@
 		<div id="unicef" class="portfolioContainer">
 			<div class="headerImage" style="background-image: url(img/cas_cover.png)">
 				<div class="bigTitle" style="font-size: 4vw;">Center for Academic Support</div>
-				<div class="homeLogo" title="home" onclick="location.href='index.html'"></div>
+				<div class="homeLogo" title="home" onclick="location.href='andrewthompson.me'"></div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer"> 
 			</div> </div>
