--- a/unicef.html
+++ b/unicef.html
@@ -74,7 +74,7 @@
 		<div id="unicef" class="portfolioContainer">
 			<div class="headerImage" style="background-image: url(img/unicef.jpg)">
 				<div class="bigTitle">Unicef Kid Power Bands</div>
-				<div class="homeLogo" title="home" onclick="location.href='index.html'"></div>
+				<div class="homeLogo" title="home" onclick="location.href='andrewthompson.me'"></div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer"> 
 			</div> </div>
