--- a/pangea.html
+++ b/pangea.html
@@ -73,7 +73,7 @@
 		<div id="unicef" class="portfolioContainer">
 			<div class="headerImage" style="background-image: url(img/pangea.png)">
 				<div class="bigTitle">Pangea.app</div>
-				<div class="homeLogo" title="home" onclick="location.href='andrewthompson.me'"></div>
+				<div class="homeLogo" title="home" onclick="location.href='index.html'"></div>
 			</div>
 			<div class="titleContainer"> <div class="titleContainerContainer"> 
 			</div> </div>
