--- a/os.html
+++ b/os.html
@@ -17,6 +17,23 @@
 	
 	<title>Andrew Thompson</title>
 	
+	<style type="text/css">
+		.portfolioContainer {
+			position: absolute;
+			width: 100%;
+			margin: auto;
+			left: 0;
+			right: 0;
+			height: auto;
+			z-index: 300;
+			background-color: #ffffff;
+			display: inline-grid;
+			grid-template-columns: 60% 40%;
+			grid-template-rows: 40vh 40vh 40vh 60vh 40vh;
+			grid-row-gap: 5vh;
+		}
+	</style>
+	
 	<script>
 		$(document).ready(function(){
 			runBarba();
