--- a/unicef.html
+++ b/unicef.html
@@ -17,6 +17,24 @@
 	
 	<title>Andrew Thompson</title>
 	
+	<style type="text/css">
+		.portfolioContainer {
+			position: absolute;
+			width: 100%;
+			margin: auto;
+			left: 0;
+			right: 0;
+			height: auto;
+			z-index: 300;
+			background-color: #ffffff;
+			display: inline-grid;
+			grid-template-columns: 60% 40%;
+/*			grid-template-rows: 40vh 40vh 40vh 25vh 60vh 40vh;*/
+			grid-auto-rows: min-content;
+			grid-row-gap: 5vh;
+		}
+	</style>
+	
 	<script>
 		$(document).ready(function(){
 			runBarba();
@@ -73,12 +91,12 @@
 		<div class="barba-container" data-namespace="Unicef">
 		<div id="unicef" class="portfolioContainer">
 			<div class="headerImage" style="background-image: url(img/unicef.jpg)">
-				<div class="bigTitle">Unicef Kid Power Bands</div>
+				<div class="bigTitle">UNICEF Kid Power Bands</div>
 				<div class="homeLogo" title="home" onclick="location.href='index.html'"></div>
 			</div>
-			<div class="titleContainer"> <div class="titleContainerContainer"> 
+			<div class="titleContainer" style="height: 40vh;"> <div class="titleContainerContainer"> 
 			</div> </div>
-			<div class="portfolioBrief">
+			<div class="portfolioBrief" style="height: 40vh;">
 				<div><h1>The Brief</h1>
 					<p>I was assigned as part of a group to analyze and create an advertising campaign for a product of our choosing. We were given a list of the 25 best inventions of 2016, and chose the UNICEF Kid Power Band, a toy that fits somewhere in between a Fitbit and an Apple Watch. The breakthrough that the team at UNICEF had had was that one third of US children didn't get enough exercise, and one third of children in developing countries were malnourished; by allowing kids in the US to earn food for kids worldwide, they were able to kill two birds with one stone. This reminded me a lot of a game I used to play in Elementary School called <a href="http://www.freerice.com">freerice.com</a> which has a similar goal but presents itself as a trivia game.</p>
 					<p>The deliverables for this project were three creative directions, with executions, that could be supported by our strategy. I tasked myself with creating two of these, while Manal Jakhar created the other one. Lindsay Saiia covered both strategy and copywriting, and Erin Weiland & Taylor Haughton focused on research.</p>
@@ -87,10 +105,10 @@
 			<div class="portfolioSolution">
 				<div><h1>The Solution</h1>
 					<p>We found that targeting the children's mothers would be the most effective route, as not only did they index highly on MRI+, but UNICEF's own advertising guidelines suggested that they were uncomfortable with targeting minors with ads. We contrasted the product with a plethora of alternatives—games that would get them moving or products that would similarly track their activity—like Pokemon GO, Just Dance Now, Garmin, and Fitbit. Also included were charities like the World Wildlife Foundation, the Nature Conservatory, and the Red Cross, all groups that had similar goals and share of mind to UNICEF. What we discovered was that the Kid Power Bands shared the characteristics of all three catagories: it's happy, healthy, <i>and</i> helpful.</p>
-					<p>We realized that, with a target that doesn't compromise and a competitive set that runs the gamut, our product fills in the whitesapce by having it all.</p>
 				</div>
 			</div>
-			<div class="portfolioSiema1 portfolioSiema">
+			<div class="portfolioLargeText" style="grid-row: 4/5;">We realized that, with a target that doesn't compromise and a competitive set that runs the gamut, our product fills in the whitesapce by having it all.</div>
+			<div class="portfolioSiema1 portfolioSiema" style="grid-row: 5/6;">
 				<div>
 					<img  src="img/unicef3.png" style="width: 100%;" class="littyCarousel1">
 				</div>
@@ -104,7 +122,7 @@
 					<img src="img/unicef2.png" style="width: 100%;" class="littyCarousel4">
 				</div>
 			</div>
-			<div class="portfolioResults">
+			<div class="portfolioResults" style="grid-row: 6/7;">
 				<div><h1>The Creative</h1>
 					<p>The first concept focuses on showing kids in the great outdoors, exploring what it really means to be a kid. The copy is almost conservation-minded, connecting the idea of saving the world through both experiencing it and helping others like them halfway across it.</p>
 					<p>The second concept focuses on extending teh UI of the app into the real world bridging the gap between the product and the lives of the users. Its headlines ask questions about hte power that the user has, and answers them with a call to action in the body copy.</p>
